deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeus-agent
  namespace: default
  labels:
    app: zeus-agent
spec:
  selector:
    matchLabels:
      app: zeus-agent
  replicas: 1
  template:
    metadata:
      labels:
        app: zeus-agent
    spec:
      serviceAccountName: zeus-agent
      containers:
      - name: zeus-agent
        image: manjeetalonjaekzero/pub:zeus-agent
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        # resources:
        #   limits:
        #     cpu: 200m
        #     memory: 500m
        #   requests:
        #     cpu: 100m
        #     memory: 300m
