deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zeus-agent
  name: zeus-agent
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: zeus-agent
status:
  loadBalancer: {}
