deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zeus-agent
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "zeus-agent.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zeus-agent
            port:
              number: 8000
